5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1756_1183.log
== TEST (2019-05-24 18:50:36) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v1 = v1[0:]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:51:16) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v1 = v[0:]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:52:09) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v1 = v[v>0:]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:59:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v1 = [v:0]
print(v1)
-- ERROR:
File "XXXX", line 3
    v1 = [v:0]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:59:26) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v1 = v[v:0]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:27:19) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = zeros[v]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:27:59) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = zeros(v)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:28:28) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = zero(v)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:29:18) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
d = zero(v)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:29:41) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
d = zeros(v)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:29:57) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
d = zeros(v)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:30:21) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
d = zeros(v)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:32:09) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v1 = zeros(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 21:32:32) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v1 = zeros(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:44:21) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
c = v[i:] > 0
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:45:35) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
c = [v:] > 0
print(c)
-- ERROR:
File "XXXX", line 3
    c = [v:] > 0
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:45:40) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
c = c[v:] > 0
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:46:19) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
c = v[v:] >= 0
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:17:47) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
while (n[i] >= 0):
	print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:18:27) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
n= v[i] 
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:07) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
n = size[v]
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:24:25) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v >= 0):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:24:25) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v >= 0):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:24:25) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v >= 0):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:24:56) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i] >= 0):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:25:07) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i] >= 0):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:25:26) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i] < 0):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:26:05) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i] < 0):
		i = i + 1
print(v[i])	
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:27:52) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i]<0):
		i = i + 1
		print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:28:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i]<0):
		i = i + 1
		print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:28:26) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i]<0):
		i = i + 1
print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:28:45) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i]<0):
		i = i + 1
print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:28:49) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i]<0):
		i = i + 1
print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:29:04) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i]<0):
		i = i + 1
print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:29:04) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i]<0):
		i = i + 1
print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:30:51) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
while (i < size(v)):
	if(v[i]<0):
		i = i + 1
print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:37:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i]<0):
		n = n + 1
	i = i + 1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:37:52) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i]<0):
		n = n + 1
	i = i + 1
print(i)

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:38:25) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i]<0):
		n = n + 1
	i = i + 1
print(n)

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:46:47) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i]<0):
		n = n + 1
	i = i + 1
print(i)
i = 0
p = 0
while (i < size(v)):
	if(v[i]>0):
		p = p + 1
	i = i + 1
print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:49:02) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i]<0):
		n = n + 1
	i = i + 1
print(n)
i = 0
p = 0
while (i < size(v)):
	if(v[i]>0):
		p = p + 1
	i = i + 1
print(n)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:49:31) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i]<0):
		n = n + 1
	i = i + 1
print(n)
i = 0
p = 0
while (i < size(v)):
	if(v[i]>0):
		p = p + 1
	i = i + 1
print(p)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:01:47) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):
		print(v[i])
	i = i + 1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:03:53) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):
		v[i] = v[i] + zeros(v)
		print(v[i])
	i = i + 1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:04:34) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):
		v[j] = v[i] + zeros[v]
		print(v[j])
	i = i + 1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:06:16) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):
		
		print(v[:i])
	i = i + 1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:06:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):
		
		print(v[i:])
	i = i + 1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:06:45) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):
		
		print(v[i:])
	i = i + 1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:07:23) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):
		print(v[i])
	

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:07:55) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):
print(v[i])
	

	


-- ERROR:
File "XXXX", line 7
    print(v[i])
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:09:40) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):

print(v[i])
	

	


-- ERROR:
File "XXXX", line 8
    print(v[i])
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:09:58) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
while (i < size(v)):
	if(v[i] > 0):
		print(v[i])
	i = i + 1
	

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:12:26) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
t = []
while (i < size(v)):
	if(v[i] > 0):
		t.append(v[i])
	i = i + 1
print(t)

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:13:00) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
n = 0
t = []
while (i < size(v)):
	if(v[i] > 0):
		t.append(v[i])
	i = i + 1
print(t)

	


-- EXECUTION TIME:
0.601863
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:13:22) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
t = []
while (i < size(v)):
	if(v[i] > 0):
		t.append(v[i])
	i = i + 1
print(t)

	


-- EXECUTION TIME:
0.289247
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:13:46) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
t = []
while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
print(t)

	


-- EXECUTION TIME:
0.342319
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:14:34) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
t = []
while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
print(t)

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:15:31) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
t = []
while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
print(str(t).replace(',',''))

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:15:39) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
t = []
while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
print(str(t).replace(',',''))

	


-- EXECUTION TIME:
0.461326
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:16:35) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
t = []
while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
print(str(t).replace(',',''))

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:18:01) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
t = []
while (i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
print(str(t).replace(',',''))

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
